fix: ui text alignment,etc

--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,6 @@
 
 *:not(i) {
 	color: white;
-	font-size: 1.006rem;
 	font-weight: 100;
 	font-family: var(--font);
 }
@@ -126,9 +125,7 @@ a {
 }
 
 #quote-welcome-message {
-	font-weight: 600 !important;
-	font-size: 2.3rem !important;
-	font-family:  'Movistar Text', sans-serif;
+	font-family: 'Movistar Text', sans-serif;
 }
 
 @media (max-width: 767px) {
